# dictate-desktop

./: .gitignore  .sops.yaml  Cargo.toml  default.nix  flake.nix  secrets.yaml
scripts/: benchmark.py  check-models.py
src/: assemblyai.rs  audio.rs  config.rs  correct.rs  daemon.rs  deepgram.rs  fillers.rs  fireworks.rs  fnkey.rs  groq.rs  inputmethod.rs  keyinject.rs  main.rs  output.rs  overlay.rs  sound.rs  tray.rs  vad.rs
