[package]
name = "dictate"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
dirs = "5.0"
evdev = { version = "0.12", features = ["tokio"] }
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ksni = "0.3.3"
wrtype = "0.1"
smithay-client-toolkit = { version = "0.20", features = ["calloop"] }
wayland-client = "0.31"
calloop = "0.14"
calloop-wayland-source = "0.4"
wl-clipboard-rs = "0.9"
femtovg = "0.9"
khronos-egl = { version = "6", features = ["dynamic"] }
wayland-egl = "0.32"
